# pydg1000z

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
src/pydg1000z/: __init__.py  pydg1000z.py
