[metadata]
name = pydg1000z
version = 0.0.2
author = P.M.Schueler
author_email = peter.schueler@gmxpro.de
description = Rigol DG1000Z control library (unofficial)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PMSchueler/pydg1000z
Issues = https://github.com/PMSchueler/pydg1000z/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
	pylabdevs-tspspi >= 0.0.15

[options.packages.find]
where = src
